test/parsing/ferguson/reserved-complex.chpl
var complex = 0;

proc f(complex) {
}

class complex {
  var complex =0;
}

type complex = string;
